--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="container-fluid">
 				<div class="row justify-content-center">
 					<div class="col-12 text-center">
-						<h1>Kwame Dollar</h1>
+						<h1>James Wood</h1>
 					</div>
 					<div class="col-12 text-center mb-2">
 						<div class="dancing">photography</div>
@@ -44,7 +44,7 @@
 						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
 					</div>
 					<div class="col-12 text-center">
-						<p><span>Kwame Dollar</span></p>
+						<p><span>James Wood</span></p>
 					</div>
 				</div>
 			</div>
@@ -57,7 +57,7 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-12 text-center">
-						<a href="#" class="hover-target">dollar@photography.com</a>
+						<a href="#" class="hover-target">jameswood@photography.com</a>
 					</div>
 					<div class="col-12 text-center social mt-4">
 						<a href="#" class="hover-target">instagram</a>
